--- a/demo-parent/demo-web/pom.xml
+++ b/demo-parent/demo-web/pom.xml
@@ -18,6 +18,13 @@
         </dependency>
 
         <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+            <version>2.1.4.RELEASE</version>
+			<scope>provided</scope>
+		</dependency>
+
+        <dependency>
             <artifactId>demo-websocket</artifactId>
             <groupId>org.example</groupId>
         </dependency>
