--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,10 @@ demo-parent/.idea/libraries/Maven__ch_qos_logback_logback_classic_1_2_3.xml
 demo-parent/.idea/encodings.xml
 demo-parent/demo-websocket/target/
 demo-parent/demo-web/target/
+demo-parent/.idea/
+demo-parent/demo-bug/target/
+*.cmd
+demo-parent/rabbitmq-comsume/.mvn/
+demo-parent/rabbitmq-produce/.mvn/
+demo-parent/rabbitmq-produce/mvnw
+demo-parent/rabbitmq-comsume/mvnw
