--- a/demo-parent/rabbitmq-produce/src/main/resources/application.yml
+++ b/demo-parent/rabbitmq-produce/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+spring:
+  #...
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    virtual-host: /
+    username: guest
+    password: guest
+server:
+  port: 8081
