--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ demo-parent/rabbitmq-comsume/.mvn/
 demo-parent/rabbitmq-produce/.mvn/
 demo-parent/rabbitmq-produce/mvnw
 demo-parent/rabbitmq-comsume/mvnw
+demo-parent/demo-test/target/
