--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -15,6 +15,7 @@
         <module>demo-design</module>
         <module>demo-test</module>
         <module>demo-web</module>
+        <module>demo-annotation</module>
     </modules>
 
     <properties>
