--- a/demo-parent/demo-annotation/pom.xml
+++ b/demo-parent/demo-annotation/pom.xml
@@ -19,6 +19,11 @@
             <version>5.3.1</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
