--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -17,6 +17,11 @@
         <module>demo-web</module>
         <module>demo-annotation</module>
     </modules>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.3.RELEASE</version>
+    </parent>
 
     <properties>
         <demo.version>${project.version}</demo.version>
