--- a/demo-parent/demo-test/pom.xml
+++ b/demo-parent/demo-test/pom.xml
@@ -17,6 +17,18 @@
             <version>5.2.7.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.3.4.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
