--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -16,6 +16,10 @@
         <module>demo-test</module>
         <module>demo-web</module>
         <module>demo-annotation</module>
+        <module>demo-spring-websocket</module>
+        <module>demo-websocket-spring</module>
+        <module>demo-websocket-tio</module>
+        <module>demo-websocket-stomp</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
